[gd_scene load_steps=6 format=3 uid="uid://o6s3ut4j53f3"]

[ext_resource type="Script" path="res://Scenes/button.gd" id="1_b8kb5"]
[ext_resource type="TileSet" uid="uid://b5wosebwrakaf" path="res://Assets/deco_tileset.tres" id="2_ikggl"]
[ext_resource type="AudioStream" uid="uid://drstj6dh8uo85" path="res://Assets/SFX/button_on.wav" id="3_cks4t"]
[ext_resource type="AudioStream" uid="uid://by2orf762cynu" path="res://Assets/SFX/button_off.wav" id="4_4ahbb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vmxtr"]
size = Vector2(34, 10)

[node name="Button" type="Area2D"]
texture_filter = 1
scale = Vector2(3, 3)
script = ExtResource("1_b8kb5")

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
tile_set = ExtResource("2_ikggl")
format = 2
layer_0/tile_data = PackedInt32Array(65535, 65537, 1, 0, 65537, 1, 65534, 131073, 1, 1, 196609, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_vmxtr")

[node name="ButtonOnFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_cks4t")
volume_db = -6.0

[node name="ButtonOffFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_4ahbb")
volume_db = -6.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
